src/styles/components/_listing-page.scss
@use "../config" as *;

.listing-page {
  padding-top: $grid-m;
  padding-bottom: $grid-l;

  @include media-query(medium) {
    padding-top: $grid-l;
    padding-bottom: $grid-xl;
  }

  &__main {
    margin-bottom: $grid-l;

    @include media-query(medium) {
      margin-bottom: 0;
    }
  }

  &__list {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  &__sidebar {
    @include media-query(medium) {
      padding-left: $grid-m;
    }
  }
}

